--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "porfolio-astro",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/tailwind": "^5.0.4",
-    "astro": "^4.0.7",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "0.3.4",
+    "@astrojs/tailwind": "5.0.4",
+    "@fontsource-variable/onest": "5.0.2",
+    "astro": "4.0.7",
+    "tailwindcss": "3.4.0",
+    "typescript": "5.3.3"
   }
 }
